-- https://github.com/denisshevchenko/ohaskell.guide

name:                ohaskell
version:             2.0.0.0
synopsis:            Книга "О Haskell по-человечески"

homepage:            http://www.ohaskell.guide

license-file:        LICENSE

author:              Denis Shevchenko <me@dshevchenko.biz>
maintainer:          Denis Shevchenko <me@dshevchenko.biz>

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable ohaskell
  main-is:             Main.hs

  other-modules:       Chapters
                     , CreatePdf
                     , CreateEpub
                     , CreateEpubCss
                     , CreateCss
                     , CreateHtml
                     , CreateHtmlTemplates
                     , PrepareHtmlTOC
                     , SingleMarkdown

  build-depends:       base
                     , text
                     , hakyll
                     , blaze-html
                     , blaze-markup
                     , clay
                     , process
                     , vector
                     , async
                     , directory

  hs-source-dirs:      src

  default-language:    Haskell2010

  ghc-options:         -Wall -threaded
